IN-546 - Fix spacing for help text below summary box

--- a/src/idea/static/idea/css/idea.css
+++ b/src/idea/static/idea/css/idea.css
@@ -386,7 +386,7 @@ ul.section-nav li.active a {
 .project-add input#id_title,
 .project-add select#id_banner,
 .project-add textarea#id_text,
-.project-add input#id_summary,
+.project-add textarea#id_summary,
 .project-add input#id_tags,
 .selectize-control {
     width: 48.57142%;
